landscape not fitting fix

--- a/media query/mediaq002/style/generic.css
+++ b/media query/mediaq002/style/generic.css
@@ -10,6 +10,7 @@ html,body{
     height: 100vh;
     background-color: rgb(0, 3, 168);
     background-repeat: no-repeat;
+    background-size: contain;
 }
 
 
