--- a/media query/mediaq002/style/portrait.css
+++ b/media query/mediaq002/style/portrait.css
@@ -3,8 +3,6 @@
 
 body{
     background-image: url('../../imagens/cev-portrait.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: left bottom;
+    background-position: center bottom;
 }
 
